# terramar

./: LICENSE  README.md  pyproject.toml  run.sh
service/: fstab  install.sh  terramar.service
terramar/: common.py  iogpio.py  library.py  sound.py  terramar.py
tests/: test_terramar.py
